--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,24 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --text-color: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --gradient: linear-gradient(150deg, rgba(255,141,92,1) 0%, rgba(241,67,44,1) 13%, rgba(233,18,12,1) 23%, rgba(230,0,0,1) 26%, rgba(215,3,3,1) 34%, rgba(174,14,14,1) 51%, rgba(159,19,19,1) 60%, rgba(96,19,19,1) 100%);
+  --font-family: 'Lato', sans-serif;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-family);
+}
+
+.hero-section {
+  background-image: url('../images/background-hero.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
