--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 @tailwind base;
@@ -30,6 +29,13 @@ body {
   background-repeat: no-repeat;
 }
 
+.hero-section-regroupement {
+  background-image: url('../images/bg-regroupement-credit.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .text-gradient {
   background: var(--gradient-text);
   background-clip: text;
@@ -53,4 +59,26 @@ body {
 
 .focus-outline {
   @apply focus:outline-secondary focus:outline-1;
+}
+
+a {
+  -webkit-tap-highlight-color: transparent;
+}
+
+a:active,
+a:focus,
+a:visited {
+  color: inherit !important;
+}
+
+.navbar a,
+.drawer a {
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.navbar a:active,
+.drawer a:active {
+  color: #FFFFFF !important;
 }
