--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,13 @@ body {
   background-repeat: no-repeat;
 }
 
+.bg-section {
+  background-image: url('../images/zeta-bg-section.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .hero-section-dark {
   background-image: url('../images/bg-hero-dark.svg');
   background-size: cover;
