--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  @apply lg:h-[13rem];
 }
 
 .hero-section-dark {
