--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -7,8 +7,13 @@
 :root {
   --text-color: #ffffff;
   --foreground: #171717;
-  --gradient-text: linear-gradient(350deg, rgba(233,18,12,1) 0%, rgba(215,3,3,1) 51%, rgba(174,14,14,1) 100%);
-  --font-family: 'Lato', sans-serif;
+  --gradient-text: linear-gradient(
+    350deg,
+    rgba(233, 18, 12, 1) 0%,
+    rgba(215, 3, 3, 1) 51%,
+    rgba(174, 14, 14, 1) 100%
+  );
+  --font-family: "Lato", sans-serif;
 }
 
 body {
@@ -16,14 +21,14 @@ body {
 }
 
 .hero-section {
-  background-image: url('../images/background-hero.svg');
+  background-image: url("../images/background-hero.svg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .bg-section {
-  background-image: url('../images/zeta-bg-section.svg');
+  background-image: url("../images/zeta-bg-section.svg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,28 +36,28 @@ body {
 }
 
 .hero-section-dark {
-  background-image: url('../images/bg-hero-dark.svg');
+  background-image: url("../images/bg-hero-dark.svg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .hero-section-regroupement {
-  background-image: url('../images/bg-regroupement-credit.png');
+  background-image: url("../images/bg-regroupement-credit.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .hero-section-rgpd {
-  background-image: url('../images/bg-rgpd.png');
+  background-image: url("../images/bg-rgpd.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .hero-section-et-delais {
-  background-image: url('../images/bg-etapes-et-delais.png');
+  background-image: url("../images/bg-etapes-et-delais.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -90,7 +95,11 @@ a {
 a:active,
 a:focus,
 a:visited {
-  color: inherit !important;
+  color: inherit;
+}
+
+.button-home {
+  color: #ffffff !important;
 }
 
 .navbar a,
@@ -102,7 +111,7 @@ a:visited {
 
 .navbar a:active,
 .drawer a:active {
-  color: #FFFFFF !important;
+  color: #ffffff !important;
 }
 
 html {
@@ -110,5 +119,5 @@ html {
 }
 
 h3[id^="etape-"] {
-  scroll-margin-top: 100px; /* Ajustez cette valeur selon vos besoins */
+  scroll-margin-top: 100px;
 }
