--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,13 @@
     rgba(174, 14, 14, 1) 100%
   );
   --font-family: "Lato", sans-serif;
+  font-size: 16px;
+}
+
+@media (min-width: 2240px) {
+  :root {
+    font-size: 20px;
+  }
 }
 
 body {
